--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
 
     <div class="footer">
         <div class="disclaimer"
-            style="max-width: %90; text-align: right; font-size: 10px; line-height: 1;  font-family: 'Roboto', Arial, sans-serif">
+            style="max-width: 90%; text-align: right; font-size: 10px; line-height: 1;  font-family: 'Roboto', Arial, sans-serif">
             <p>DISCLAIMER: The Tribute token is a fictional concept created for demonstration and educational
                 purposes only. It does
                 not represent a real cryptocurrency or financial asset. Any references to investing or financial
@@ -799,474 +799,27 @@
                 storytelling purposes only.</p>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.5.2/dist/web3.min.js"></script>
-
     <script>
-        // Contract ABI
-        var contractABI = [
-            {
-                inputs: [
-                    {
-                        internalType: "uint256",
-                        name: "taxRate",
-                        type: "uint256",
-                    },
-                ],
-                stateMutability: "nonpayable",
-                type: "constructor",
-            },
-            {
-                anonymous: false,
-                inputs: [
-                    {
-                        indexed: true,
-                        internalType: "address",
-                        name: "owner",
-                        type: "address",
-                    },
-                    {
-                        indexed: true,
-                        internalType: "address",
-                        name: "spender",
-                        type: "address",
-                    },
-                    {
-                        indexed: false,
-                        internalType: "uint256",
-                        name: "value",
-                        type: "uint256",
-                    },
-                ],
-                name: "Approval",
-                type: "event",
-            },
-            {
-                anonymous: false,
-                inputs: [
-                    {
-                        indexed: true,
-                        internalType: "address",
-                        name: "previousOwner",
-                        type: "address",
-                    },
-                    {
-                        indexed: true,
-                        internalType: "address",
-                        name: "newOwner",
-                        type: "address",
-                    },
-                ],
-                name: "OwnershipTransferred",
-                type: "event",
-            },
-            {
-                anonymous: false,
-                inputs: [
-                    {
-                        indexed: true,
-                        internalType: "address",
-                        name: "from",
-                        type: "address",
-                    },
-                    {
-                        indexed: true,
-                        internalType: "address",
-                        name: "to",
-                        type: "address",
-                    },
-                    {
-                        indexed: false,
-                        internalType: "uint256",
-                        name: "value",
-                        type: "uint256",
-                    },
-                ],
-                name: "Transfer",
-                type: "event",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "_address",
-                        type: "address",
-                    },
-                ],
-                name: "addWhitelistAddress",
-                outputs: [],
-                stateMutability: "nonpayable",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "owner",
-                        type: "address",
-                    },
-                    {
-                        internalType: "address",
-                        name: "spender",
-                        type: "address",
-                    },
-                ],
-                name: "allowance",
-                outputs: [
-                    {
-                        internalType: "uint256",
-                        name: "",
-                        type: "uint256",
-                    },
-                ],
-                stateMutability: "view",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "spender",
-                        type: "address",
-                    },
-                    {
-                        internalType: "uint256",
-                        name: "amount",
-                        type: "uint256",
-                    },
-                ],
-                name: "approve",
-                outputs: [
-                    {
-                        internalType: "bool",
-                        name: "",
-                        type: "bool",
-                    },
-                ],
-                stateMutability: "nonpayable",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "account",
-                        type: "address",
-                    },
-                ],
-                name: "balanceOf",
-                outputs: [
-                    {
-                        internalType: "uint256",
-                        name: "",
-                        type: "uint256",
-                    },
-                ],
-                stateMutability: "view",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "account",
-                        type: "address",
-                    },
-                ],
-                name: "daysHeld",
-                outputs: [
-                    {
-                        internalType: "uint256",
-                        name: "",
-                        type: "uint256",
-                    },
-                ],
-                stateMutability: "view",
-                type: "function",
-            },
-            {
-                inputs: [],
-                name: "decimals",
-                outputs: [
-                    {
-                        internalType: "uint8",
-                        name: "",
-                        type: "uint8",
-                    },
-                ],
-                stateMutability: "view",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "spender",
-                        type: "address",
-                    },
-                    {
-                        internalType: "uint256",
-                        name: "subtractedValue",
-                        type: "uint256",
-                    },
-                ],
-                name: "decreaseAllowance",
-                outputs: [
-                    {
-                        internalType: "bool",
-                        name: "",
-                        type: "bool",
-                    },
-                ],
-                stateMutability: "nonpayable",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "spender",
-                        type: "address",
-                    },
-                    {
-                        internalType: "uint256",
-                        name: "addedValue",
-                        type: "uint256",
-                    },
-                ],
-                name: "increaseAllowance",
-                outputs: [
-                    {
-                        internalType: "bool",
-                        name: "",
-                        type: "bool",
-                    },
-                ],
-                stateMutability: "nonpayable",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "_address",
-                        type: "address",
-                    },
-                ],
-                name: "isWhitelisted",
-                outputs: [
-                    {
-                        internalType: "bool",
-                        name: "",
-                        type: "bool",
-                    },
-                ],
-                stateMutability: "view",
-                type: "function",
-            },
-            {
-                inputs: [],
-                name: "name",
-                outputs: [
-                    {
-                        internalType: "string",
-                        name: "",
-                        type: "string",
-                    },
-                ],
-                stateMutability: "view",
-                type: "function",
-            },
-            {
-                inputs: [],
-                name: "owner",
-                outputs: [
-                    {
-                        internalType: "address",
-                        name: "",
-                        type: "address",
-                    },
-                ],
-                stateMutability: "view",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "_address",
-                        type: "address",
-                    },
-                ],
-                name: "removeWhitelistAddress",
-                outputs: [],
-                stateMutability: "nonpayable",
-                type: "function",
-            },
-            {
-                inputs: [],
-                name: "renounceOwnership",
-                outputs: [],
-                stateMutability: "nonpayable",
-                type: "function",
-            },
-            {
-                inputs: [],
-                name: "symbol",
-                outputs: [
-                    {
-                        internalType: "string",
-                        name: "",
-                        type: "string",
-                    },
-                ],
-                stateMutability: "view",
-                type: "function",
-            },
-            {
-                inputs: [],
-                name: "totalSupply",
-                outputs: [
-                    {
-                        internalType: "uint256",
-                        name: "",
-                        type: "uint256",
-                    },
-                ],
-                stateMutability: "view",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "to",
-                        type: "address",
-                    },
-                    {
-                        internalType: "uint256",
-                        name: "amount",
-                        type: "uint256",
-                    },
-                ],
-                name: "transfer",
-                outputs: [
-                    {
-                        internalType: "bool",
-                        name: "",
-                        type: "bool",
-                    },
-                ],
-                stateMutability: "nonpayable",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "from",
-                        type: "address",
-                    },
-                    {
-                        internalType: "address",
-                        name: "to",
-                        type: "address",
-                    },
-                    {
-                        internalType: "uint256",
-                        name: "amount",
-                        type: "uint256",
-                    },
-                ],
-                name: "transferFrom",
-                outputs: [
-                    {
-                        internalType: "bool",
-                        name: "",
-                        type: "bool",
-                    },
-                ],
-                stateMutability: "nonpayable",
-                type: "function",
-            },
-            {
-                inputs: [
-                    {
-                        internalType: "address",
-                        name: "newOwner",
-                        type: "address",
-                    },
-                ],
-                name: "transferOwnership",
-                outputs: [],
-                stateMutability: "nonpayable",
-                type: "function",
-            },
-        ],
-
-
-        // Contract address
-        var contractAddress = '0x5fD6Baf47955cA5CcE78681458A786FefA545eEc';
-
-        // Create an instance of web3
-        var web3 = new Web3(window.ethereum);
-
-        // Request access to the user's MetaMask account
-        async function requestAccount() {
-            try {
-                await window.ethereum.request({ method: 'eth_requestAccounts' });
-                console.log('Account connected');
-            } catch (error) {
-                console.error('User rejected connection:', error);
-            }
-        }
-
-
-        // Create an instance of the contract
-        var contract = new web3.eth.Contract.ERC20Contract(contractABI, contractAddress);
-
-        // Function to be executed on button click
-        async function transferTokens() {
-            // Request access to account
-            await requestAccount();
-
-            // Parameters for the transfer function
-            var to = '0x9876543210987654321098765432109876543210';  // recipient's address
-            var amount = web3.utils.toWei('1', 'ether');  // the amount of tokens to transfer
-
-            // Call the transfer function
-            try {
-                await contract.methods.transfer(to, amount).send({ from: ethereum.selectedAddress });
-                console.log('Tokens transferred successfully');
-            } catch (error) {
-                console.error('Error transferring tokens:', error);
-            }
-        }
-
-
-        // Bind the function to the button
-        document.getElementById('claimButton').addEventListener('click', transferTokens);
-
-
-        function createCoinRain() {
-            // Create 100 coins
-            for (let i = 0; i < 100; i++) {
-                const coin = document.createElement("div");
-                coin.className = "coin";
-                document.body.appendChild(coin);
-            }
-
-            // Remove coins after the animation ends
-            setTimeout(function () {
-                const coins = document.querySelectorAll(".coin");
-                coins.forEach(function (coin) {
-                    coin.remove();
+        window.addEventListener('load', function () {
+            // Check if Metamask is installed
+            if (typeof window.ethereum !== 'undefined') {
+                // Create the connect button
+                document.getElementById('connect-button').addEventListener('click', function () {
+                    // Connect to Metamask
+                    window.ethereum.request({ method: 'eth_requestAccounts' }).then(accounts => {
+                        // Get the first account
+                        const account = accounts[0];
+                        // Do something with the account
+                        console.log(account);
+                    });
                 });
-            }, 3000); // Adjust based on your animation duration
-        }
-
-
+            } else {
+                // Metamask is not installed, prompt the user to install it
+                alert('Please install MetaMask');
+            }
+        });
     </script>
-
+    <button id="connect-button">Connect Wallet</button>
 </body>
 
 </html>
